@startuml

title __TAX's Class Diagram__\n

  package logic {
    package logic.money {
      package logic.money.tax {
        class Assurances {
            {static} - ourInstance : Assurances
            {static} + getInstance()
            - Assurances()
            + getDescription()
            + applyTax()
            + revertTax()
        }
      }
    }
  }
  

  package logic {
    package logic.money {
      package logic.money.tax {
        class PensionTax {
            {static} - ourInstance : PensionTax
            {static} + getInstance()
            - PensionTax()
            + getDescription()
            + applyTax()
            + revertTax()
        }
      }
    }
  }
  

  package logic {
    package logic.money {
      package logic.money.tax {
        interface Tax {
            {abstract} + getDescription()
            {abstract} + applyTax()
            {abstract} + revertTax()
        }
      }
    }
  }
  

  package logic {
    package logic.money {
      package logic.money.tax {
        class TestPeriod {
            {static} - ourInstance : TestPeriod
            {static} + getInstance()
            - TestPeriod()
            + getDescription()
            + applyTax()
            + revertTax()
        }
      }
    }
  }
  

  Assurances -up-|> Tax
  Assurances o-- Percentage : percentage
  PensionTax -up-|> Tax
  PensionTax o-- Percentage : percentage
  TestPeriod -up-|> Tax


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
